--- a/.github/workflows/react-flow.yml
+++ b/.github/workflows/react-flow.yml
@@ -33,3 +33,31 @@ jobs:
       with:
         push: true
         tags: babah11/babahcloud9:react-calculator
+
+  scan_docker_image:
+    needs: [ build ]
+    
+    runs-on : ubuntu-latest
+    steps:
+    - name: Checkout 🛎️
+      uses: actions/checkout@v2
+
+    - name: Log in to the Container registry 📦
+      uses: docker/login-action@v2
+      with:
+        #registry: ${{ env.GITHUB_REGISTRY }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+    - name: Scan Docker image 🐳
+      uses: snyk/actions/docker@master
+      continue-on-error: true
+      with:
+          image: ${{ env.REGISTRY }}/${{ env.REPOSITORY_NAME }}:${{ env.DOCKER_IMAGE_TAG }}
+          args: --file=Dockerfile --severity-threshold=high --sarif-file-output=snyk.sarif
+      env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+    - name: Upload Snyk report as sarif 📦
+      uses: github/codeql-action/upload-sarif@v2
+      with:
+          sarif_file: snyk.sarif
