added image scan using synk

--- a/.github/workflows/react-flow.yml
+++ b/.github/workflows/react-flow.yml
@@ -45,14 +45,13 @@ jobs:
     - name: Log in to the Container registry 📦
       uses: docker/login-action@v2
       with:
-        #registry: ${{ env.GITHUB_REGISTRY }}
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
     - name: Scan Docker image 🐳
       uses: snyk/actions/docker@master
-      continue-on-error: true
+      continue-on-error: false
       with:
-          image: ${{ env.REGISTRY }}/${{ env.REPOSITORY_NAME }}:${{ env.DOCKER_IMAGE_TAG }}
+          image: babah11/babahcloud9:react-calculator
           args: --file=Dockerfile --severity-threshold=high --sarif-file-output=snyk.sarif
       env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
