added image scan using synk

--- a/.github/workflows/react-flow.yml
+++ b/.github/workflows/react-flow.yml
@@ -52,8 +52,9 @@ jobs:
       continue-on-error: true
       with:
           image: babah11/babahcloud9:react-calculator
-          args: --file=Dockerfile --severity-threshold=high --sarif-file-output=snyk.sarif
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+          args: --file=Dockerfile --severity-threshold=high --sarif-file-output=snyk.sarif 
+      env:
+          INPUT_SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
     - name: Upload Snyk report as sarif 📦
       uses: github/codeql-action/upload-sarif@v2
