--- a/.github/workflows/react-flow.yml
+++ b/.github/workflows/react-flow.yml
@@ -47,14 +47,16 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
+    
     - name: Scan Docker image 🐳
       uses: snyk/actions/docker@master
       continue-on-error: true
+      env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
           image: babah11/babahcloud9:react-calculator
           args: --file=Dockerfile --severity-threshold=high --sarif-file-output=snyk.sarif 
-      env:
-          INPUT_SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      
 
     - name: Upload Snyk report as sarif 📦
       uses: github/codeql-action/upload-sarif@v2
