added image scan using synk

--- a/.github/workflows/react-flow.yml
+++ b/.github/workflows/react-flow.yml
@@ -36,7 +36,10 @@ jobs:
 
   scan_docker_image:
     needs: [ build ]
-    
+    permissions:
+      id-token: read
+      contents: read
+      packages: read
     runs-on : ubuntu-latest
     steps:
     - name: Checkout 🛎️
