added image scan using synk

--- a/.github/workflows/react-flow.yml
+++ b/.github/workflows/react-flow.yml
@@ -7,7 +7,18 @@ on:
     branches: [ "main" ]
 
 jobs:
+  test: 
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@master
+    - name: Run Snyk to check for vulnerabilities
+      uses: snyk/actions/node@master
+      env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      with:
+          args: --severity-threshold=high
   build:
+    needs: [ test ]
 
     runs-on: ubuntu-latest
 
