--- a/.github/workflows/react-flow.yml
+++ b/.github/workflows/react-flow.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+    - name: Run yarn install 
+      run: yarn install
     - name: Run Snyk to check for vulnerabilities
       uses: snyk/actions/node@master
       env:
